PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature_list feature

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID ':' TYPEID ';'
   11        | OBJECTID ':' TYPEID ASSIGN expr ';'
   12        | error '{' expr '}' ';'
   13        | error ';'

   14 formal_list: %empty
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expr: OBJECTID ASSIGN expr
   19     | expr '.' OBJECTID '(' dispatch_exprs ')'
   20     | expr '@' TYPEID '.' OBJECTID '(' dispatch_exprs ')'
   21     | OBJECTID '(' dispatch_exprs ')'
   22     | IF expr THEN expr ELSE expr FI
   23     | WHILE expr LOOP expr POOL
   24     | '{' block_exprs '}'
   25     | LET let_expr
   26     | CASE expr OF case_list ESAC
   27     | NEW TYPEID
   28     | ISVOID expr
   29     | expr '+' expr
   30     | expr '-' expr
   31     | expr '*' expr
   32     | expr '/' expr
   33     | '~' expr
   34     | expr '<' expr
   35     | expr LE expr
   36     | expr '=' expr
   37     | NOT expr
   38     | '(' expr ')'
   39     | OBJECTID
   40     | INT_CONST
   41     | STR_CONST
   42     | BOOL_CONST

   43 dispatch_exprs: %empty
   44               | expr
   45               | dispatch_exprs ',' expr

   46 block_exprs: expr ';'
   47            | block_exprs expr ';'
   48            | error ';'

   49 let_expr: OBJECTID ':' TYPEID ASSIGN expr IN expr
   50         | OBJECTID ':' TYPEID IN expr
   51         | OBJECTID ':' TYPEID ',' let_expr
   52         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   53         | error ',' let_expr
   54         | error IN expr

   55 case_list: case
   56          | case_list case

   57 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 19 20 21 38
    ')' (41) 9 19 20 21 38
    '*' (42) 31
    '+' (43) 29
    ',' (44) 16 45 51 52 53
    '-' (45) 30
    '.' (46) 19 20
    '/' (47) 32
    ':' (58) 9 10 11 17 49 50 51 52 57
    ';' (59) 4 5 6 9 10 11 12 13 46 47 48 57
    '<' (60) 34
    '=' (61) 36
    '@' (64) 20
    '{' (123) 4 5 9 12 24
    '}' (125) 4 5 9 12 24
    '~' (126) 33
    error (256) 6 12 13 48 53 54
    CLASS (258) 4 5
    ELSE (259) 22
    FI (260) 22
    IF (261) 22
    IN (262) 49 50 54
    INHERITS (263) 5
    LET (264) 25
    LOOP (265) 23
    POOL (266) 23
    THEN (267) 22
    WHILE (268) 23
    CASE (269) 26
    ESAC (270) 26
    OF (271) 26
    DARROW (272) 57
    NEW (273) 27
    ISVOID (274) 28
    STR_CONST <symbol> (275) 41
    INT_CONST <symbol> (276) 40
    BOOL_CONST <boolean> (277) 42
    TYPEID <symbol> (278) 4 5 9 10 11 17 20 27 49 50 51 52 57
    OBJECTID <symbol> (279) 9 10 11 17 18 19 20 21 39 49 50 51 52 57
    ASSIGN (280) 11 18 49 52
    NOT (281) 37
    LE (282) 35
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (50)
        on left: 9 10 11 12 13
        on right: 8
    formal_list <formals> (51)
        on left: 14 15 16
        on right: 9 16
    formal <formal> (52)
        on left: 17
        on right: 15 16
    expr <expression> (53)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 9 11 12 18 19 20 22 23 26 28 29 30 31 32 33 34 35 36 37 38 44 45 46 47 49 50 52 54 57
    dispatch_exprs <expressions> (54)
        on left: 43 44 45
        on right: 19 20 21 45
    block_exprs <expressions> (55)
        on left: 46 47 48
        on right: 24 47
    let_expr <expression> (56)
        on left: 49 50 51 52 53 54
        on right: 25 51 52 53
    case_list <cases> (57)
        on left: 55 56
        on right: 26 56
    case <case_> (58)
        on left: 57
        on right: 55 56


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

   12 feature: error . '{' expr '}' ';'
   13        | error . ';'

    '{'  shift, and go to state 20
    ';'  shift, and go to state 21


State 16

    9 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . ':' TYPEID ';'
   11        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 24


State 18

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 25

    feature  go to state 18


State 20

   12 feature: error '{' . expr '}' ';'

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr  go to state 40


State 21

   13 feature: error ';' .

    $default  reduce using rule 13 (feature)


State 22

    9 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 41

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 42
    formal       go to state 43


State 23

   10 feature: OBJECTID ':' . TYPEID ';'
   11        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 44


State 24

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 45


State 26

   22 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr  go to state 46


State 27

   25 expr: LET . let_expr

    error     shift, and go to state 47
    OBJECTID  shift, and go to state 48

    let_expr  go to state 49


State 28

   23 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr  go to state 50


State 29

   26 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr  go to state 51


State 30

   27 expr: NEW . TYPEID

    TYPEID  shift, and go to state 52


State 31

   28 expr: ISVOID . expr

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr  go to state 53


State 32

   41 expr: STR_CONST .

    $default  reduce using rule 41 (expr)


State 33

   40 expr: INT_CONST .

    $default  reduce using rule 40 (expr)


State 34

   42 expr: BOOL_CONST .

    $default  reduce using rule 42 (expr)


State 35

   18 expr: OBJECTID . ASSIGN expr
   21     | OBJECTID . '(' dispatch_exprs ')'
   39     | OBJECTID .

    ASSIGN  shift, and go to state 54
    '('     shift, and go to state 55

    $default  reduce using rule 39 (expr)


State 36

   37 expr: NOT . expr

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr  go to state 56


State 37

   33 expr: '~' . expr

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr  go to state 57


State 38

   24 expr: '{' . block_exprs '}'

    error       shift, and go to state 58
    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr         go to state 59
    block_exprs  go to state 60


State 39

   38 expr: '(' . expr ')'

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr  go to state 61


State 40

   12 feature: error '{' expr . '}' ';'
   19 expr: expr . '.' OBJECTID '(' dispatch_exprs ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' dispatch_exprs ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    LE   shift, and go to state 62
    '<'  shift, and go to state 63
    '='  shift, and go to state 64
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '@'  shift, and go to state 69
    '.'  shift, and go to state 70
    '}'  shift, and go to state 71


State 41

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 72


State 42

    9 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 73
    ','  shift, and go to state 74


State 43

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 44

   10 feature: OBJECTID ':' TYPEID . ';'
   11        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 75
    ';'     shift, and go to state 76


State 45

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 46

   19 expr: expr . '.' OBJECTID '(' dispatch_exprs ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' dispatch_exprs ')'
   22     | IF expr . THEN expr ELSE expr FI
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    THEN  shift, and go to state 77
    LE    shift, and go to state 62
    '<'   shift, and go to state 63
    '='   shift, and go to state 64
    '+'   shift, and go to state 65
    '-'   shift, and go to state 66
    '*'   shift, and go to state 67
    '/'   shift, and go to state 68
    '@'   shift, and go to state 69
    '.'   shift, and go to state 70


State 47

   53 let_expr: error . ',' let_expr
   54         | error . IN expr

    IN   shift, and go to state 78
    ','  shift, and go to state 79


State 48

   49 let_expr: OBJECTID . ':' TYPEID ASSIGN expr IN expr
   50         | OBJECTID . ':' TYPEID IN expr
   51         | OBJECTID . ':' TYPEID ',' let_expr
   52         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_expr

    ':'  shift, and go to state 80


State 49

   25 expr: LET let_expr .

    $default  reduce using rule 25 (expr)


State 50

   19 expr: expr . '.' OBJECTID '(' dispatch_exprs ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' dispatch_exprs ')'
   23     | WHILE expr . LOOP expr POOL
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    LOOP  shift, and go to state 81
    LE    shift, and go to state 62
    '<'   shift, and go to state 63
    '='   shift, and go to state 64
    '+'   shift, and go to state 65
    '-'   shift, and go to state 66
    '*'   shift, and go to state 67
    '/'   shift, and go to state 68
    '@'   shift, and go to state 69
    '.'   shift, and go to state 70


State 51

   19 expr: expr . '.' OBJECTID '(' dispatch_exprs ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' dispatch_exprs ')'
   26     | CASE expr . OF case_list ESAC
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    OF   shift, and go to state 82
    LE   shift, and go to state 62
    '<'  shift, and go to state 63
    '='  shift, and go to state 64
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '@'  shift, and go to state 69
    '.'  shift, and go to state 70


State 52

   27 expr: NEW TYPEID .

    $default  reduce using rule 27 (expr)


State 53

   19 expr: expr . '.' OBJECTID '(' dispatch_exprs ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' dispatch_exprs ')'
   28     | ISVOID expr .
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    '@'  shift, and go to state 69
    '.'  shift, and go to state 70

    $default  reduce using rule 28 (expr)


State 54

   18 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    expr  go to state 83


State 55

   21 expr: OBJECTID '(' . dispatch_exprs ')'

    IF          shift, and go to state 26
    LET         shift, and go to state 27
    WHILE       shift, and go to state 28
    CASE        shift, and go to state 29
    NEW         shift, and go to state 30
    ISVOID      shift, and go to state 31
    STR_CONST   shift, and go to state 32
    INT_CONST   shift, and go to state 33
    BOOL_CONST  shift, and go to state 34
    OBJECTID    shift, and go to state 35
    NOT         shift, and go to state 36
    '~'         shift, and go to state 37
    '{'         shift, and go to state 38
    '('         shift, and go to state 39

    $default  reduce using rule 43 (dispatch_exprs)

    expr            go to state 84
    dispatch_exprs  go to state 85


State 56

   19 expr: expr . '.' OBJECTID '(' dispatch_exprs ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' dispatch_exprs ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   37     | NOT expr .

    LE   shift, and go to state 62
    '<'  shift, and go to state 63
    '='  shift, and go to state 64
    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68
    '@'  shift, and go to state 69
    '.'  shift, and go to state 70

    $default  reduce using rule 37 (expr)


State 57

   19 expr: expr . '.' OBJECTID '(' dispatch_exprs ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' dispatch_exprs ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | '~' expr .
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    '@'  shift, and go to state 69
    '.'  shift, and go to state 70

    $default  reduce using rule 33 (expr)


State 58

   48 block_exprs: error . ';'

    ';'  shift, and go to state 86


State 59

   19 expr: expr . '.' OBJECTID '(' dispatch_exprs ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' dispatch_exprs ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   46 block_exprs: expr . ';'
